--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         
     <section id="important">
     <table>
-            <caption>Important informations</caption>
+            <caption>Important information</caption>
             <tr>
                 <th>About</th>
                 <th>Description</th>
