--- a/journey.html
+++ b/journey.html
@@ -24,9 +24,9 @@
     </header>
 <body>
 
-<div class="journey">
+<div id="block_content">
         <img src="photos/Screenshot 2024-12-11 212858.png" alt="photo1.png" class="luzia-img">
-        <p><strong>Our Journey so far:</strong><br>Nestled in the heart of a bustling town, there stands a bakery with a charm that only decades of dedication can create. Known as Kit Festa Campinas, it has been a beloved cornerstone of the community for nearly 40 years. The journey of this treasured establishment is a story of passion, perseverance, and the unyielding pursuit of excellence.
+        <p class="journey"><strong>Our Journey so far:</strong><br>Nestled in the heart of a bustling town, there stands a bakery with a charm that only decades of dedication can create. Known as Kit Festa Campinas, it has been a beloved cornerstone of the community for nearly 40 years. The journey of this treasured establishment is a story of passion, perseverance, and the unyielding pursuit of excellence.
             <br>
             <strong> Humble Beginnings </strong>
             <br>
@@ -39,7 +39,7 @@
             Kit Festa Campinas quickly became a household name. 
             </p>
         
-   <p>
+   <p  class="journey">
     melt-in-your-mouth chocolate cakes earned accolades far and wide. Luzia and Antonio commitment to quality never wavered. They insisted on using the finest ingredients and traditional methods, ensuring every bite was a testament to their craftsmanship.
     <br>
     <strong> Community Connection </strong> 
